fixed tab overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,7 @@ CARD STYLES
 .dislikeButton i:hover {
   color: #c62828 !important;
 }
+
+.tabs{
+    overflow-x: hidden;
+}
